Fixed liquibase failing on sonar, fixed sonar issues